      Make the chunk allocator's alignment more general and
        platform-independent.
      IEEE 802.11: Fix three undefined behaviors in grammar.y.
    Linux:
      Fix check for mac80211 phydev.
      Don't create monitor-mode interface if we're capturing on one.
      Expand the table of DSA tag types to include all current types.
      Fix an error message when deleting a monN interface.
    FreeBSD:
      Fix detection and enablng of zero-copy supporrt.
      Fix errors in the zero-copy code.
    Solaris:
      Fix not to ignore logical interfaces in fad-gifc.c and
        fad-glifc.c.
    Windows:
      Fix filtering for VLAN-tagged frames.
    D-Bus:
      Fix message leak.
    Capture file writing:
      Don't close the output stream if it's stdout, just flush it.
    Documentation:
      Explicitly document that closing a pcap_t for a savefile opened
        with pcap_fopen_offline() will close the standard I/O stream.
    Building and testing:
      Makefile.in: Include instrument-functions.c in the release tarball.
      CMake: Fix libnl usage with pkg-config.
      CMake: Fix build with CMake 3.31.
      CI: Report CMake version in builds.
      CI: Visual Studio 2022 builds added, including ARM64 builds;
        Visual Studio 2015 builds dropped.
      Don't build with sslutils.c if we don't have a TLS library.
      Build on Windows with a newer version of OpenSSL.
      CMake: generalize handling of non-x86 Windows architectures.
      CI: use the -A flag for all Visual Studio generators.
      Remove the fuzzing props from the release tarball.
      Autoconf: Use AC_SYS_YEAR2038_RECOMMENDED when possible if the
        environment variable BUILD_YEAR2038 = yes (via autogen.sh)

Friday, August 30, 2024 / The Tcpdump Group
  Summary for 1.10.5 libpcap release
    Source code:
      Spell WirelessHART details properly.
      Mark pcap_vasprintf() as printf-like.
      Finalize moving of bpf_filter.c. (GH #1166)